--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "clearAll": "watchman watch-del-all && rm -rf node_modules && rm yarn.lock && yarn cache clean && yarn install && rm -rf /tmp/metro-* && rm -fr $TMPDIR/metro-cache"
   },
   "dependencies": {
-    "expo": "~43.0.0",
-    "expo-status-bar": "~1.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.2",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-web": "0.17.1"
+    "@expo/metro-runtime": "~3.1.1",
+    "expo": "^50.0.4",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^7.5",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.1",
